welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: type mismatch;
 found   : Unit
 required: Int
	if (a<=20 && a>=10 && b<10){return a}
        ^